# hyperliquid-features

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: README.md  settings.json
.claude/hooks/: auto-commit.sh  auto-ship.sh  guard-main.sh  remind-ship.sh
db/init/: 01_schema.sql  02_meta.sql  03_triggers.sql  04_retention.sql
grafana/dashboards/: .gitkeep  live_market_monitor.json  modeled_liq_heatmap.json  order_book_depth.json  order_flow_whales.json  stop_tp_heatmap.json
grafana/provisioning/dashboards/: provider.yml
grafana/provisioning/datasources/: timescaledb.yml
hlsignals/: __init__.py  api.py  collector.py  fairvalue.py  labels.py  liquidations.py  livepanel.py  predictive.py  store.py  universe.py
scripts/: collect_live.py  fetch_fairvalue.py  load_db.py  load_meta.py  poll_triggers.py  spike_fairvalue.py  spike_liquidations.py
src/hl_signals/: store.py
src/hl_signals/cli/: __init__.py  collect.py  fetch_fairvalue.py  load_db.py  load_meta.py  poll_triggers.py  spike_fairvalue.py  spike_liquidations.py  spike_triggers.py
src/hl_signals/ingest/: __init__.py  collector.py  fairvalue.py  universe.py
src/hl_signals/research/: __init__.py  liquidations.py  predictive.py  triggers.py
