[project]
name = "hl-signals"
version = "0.1.0"
description = "Collect Hyperliquid market-data features and test them against forward returns"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "tabulate>=0.10.0",
    "websockets>=16.0",
]

[project.scripts]
hl-fetch-fairvalue = "hl_signals.cli.fetch_fairvalue:main"
hl-collect = "hl_signals.cli.collect:main"
hl-load-db = "hl_signals.cli.load_db:main"
hl-load-meta = "hl_signals.cli.load_meta:main"
hl-poll-triggers = "hl_signals.cli.poll_triggers:main"
hl-spike-fairvalue = "hl_signals.cli.spike_fairvalue:main"
hl-spike-liquidations = "hl_signals.cli.spike_liquidations:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hl_signals"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ty>=0.0.46",
]
